--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
     <body>
       This is going to be my portfolio homepage !
+       <img src="E8cyDq9XIAAq5DX.jfif" alt='frankocean' />
     </body>
 </html>
